[metadata]
name = cihelper
version = 0.0.1
description = helpers for libtorrent CI

[options]
python_requires = >=3.6
packages = find:
install_requires =
    appdirs

[options.entry_points]
console_scripts =
    cihelper_boost_install = cihelper.boost:install_cmd
    cihelper_cibw_run = cihelper.cibw:run_cmd
